--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,7 +25,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" >Panier</a>
+                        <a class="nav-link" href="{{path('cart_index')}}" >Panier</a>
                     </li>
                 </ul>
             </div>
