--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -1,4 +1,3 @@
-
 {% extends 'base.html.twig' %}
 
 {% block body %}
@@ -21,11 +20,15 @@
 </thead>
 <tbody>
 {% for item in items %}
+
 <tr>
 <td>{{ item.product.title }} </td>
 <td>{{ item.product.prix }} </td>
-</td>{{ item.quantity }}<td>
-</td>{{ item.product.prix * item.quantity }}<td>
+<td>{{ item.quantity }} <a href="{{path('add_one_product', {'id':item.product.id})}}" class="btn btn-success btn-sm">
+<i class="fas fa-plus"></i>
+</a></td>
+
+<td>{{ item.product.prix * item.quantity }}</td>
 <td>
 <a href="{{path('cart_remove', {'id':item.product.id})}}" class="btn btn-danger btn-sm">
 <i class="fas fa-trash"></i>
@@ -41,8 +44,10 @@
 <td>{{ total }}</td>
 <td></td>
 </tfoot>
-{% else %}
+</table>
+{% else %} 
 <p>Surprise, c'est vide !</p>
-{% endif %}
+{% endif %} 
 
 {% endblock %}
+   
